// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useitem importing a class 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "some\\\\my_namespace\\\\ClassC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem importing a class with type 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "C",
          },
          "kind": "useitem",
          "name": "some\\\\my_namespace\\\\ClassC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem importing a constant 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\\\Full\\\\CONSTANT",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "const",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem importing a constant with type 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "MY_CONST",
          },
          "kind": "useitem",
          "name": "My\\\\Full\\\\CONSTANT",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "const",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem importing a function 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\\\Full\\\\functionName",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "function",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem importing a function with type 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "func",
          },
          "kind": "useitem",
          "name": "My\\\\Full\\\\functionName",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "function",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem simple 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\\\Full\\\\NSname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem simple 2 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ArrayObject",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`useitem with type 1`] = `
Program {
  "children": Array [
    UseGroup {
      "items": Array [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "Another",
          },
          "kind": "useitem",
          "name": "My\\\\Full\\\\Classname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
